# RgbOnRest

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/ISSUE_TEMPLATE/: bug_report.md  question.md  working-device.md
Demos/: RainbowAll.py  ScreenReactive.py  StaticColor.py  abstractDemo.py  installer.bat  main.py
GitHub/: API_Document.md  Contribution.md  Errors.md  KnownIssues.md  Reference.md  WorkingDevices.md
GitHub/api_docs/: README.md  config.md  unexpected.md
GitHub/api_docs/all/: connect.md  disconnect.md  get_devices.md  set_rgb.md
GitHub/api_docs/sdks/: connect.md  disconnect.md  get_devices.md  set_rgb.md
GitHub/docs/: README.md  config.md
GitHub/docs/general/: connection.md  stop_server.md
GitHub/examples/: README.md  python.md
RGBonREST/: CMakeLists.txt  main.cpp
RGBonREST/APIServer/: APIServer.cpp  APIServer.h
RGBonREST/APIServer/RESTServer/: RESTServer.cpp  RESTServer.h  RequestHandler.cpp  RequestHandler.h
RGBonREST/APIServer/RESTServer/Logger/: AbstractLogger.h  Sqlite3Logger.cpp  Sqlite3Logger.h
RGBonREST/APIServer/SDKEngine/: AbstractSDK.h  Defines.h  SDKDefines.cpp  SDKDefines.h
RGBonREST/APIServer/SDKEngine/AsusSDK/: AsusSDK.cpp  AsusSDK.h
RGBonREST/APIServer/SDKEngine/CorsairSDK/: CorsairSDK.cpp  CorsairSDK.h
RGBonREST/APIServer/SDKEngine/CorsairSDK/includes/: CUESDK.h  CUESDKGlobal.h  CorsairKeyIdEnum.h  CorsairLedIdEnum.h
RGBonREST/APIServer/SDKEngine/RazerSDK/: RazerSDK.cpp  RazerSDK.h
RGBonREST/APIServer/SDKEngine/RazerSDK/includes/: RzChromaSDKTypes.h
RGBonREST/APIServer/ServerUtils/: Defines.h  JsonTool.cpp  JsonTool.h
RGBonREST/APIServer/ServerUtils/SDKEngine/: SDKEngine.cpp  SDKEngine.h
RGBonREST/APIServer/ServerUtils/SDKEngine/SDKWrapper/: AbstractSDK.h  Defines.h
RGBonREST/APIServer/ServerUtils/SDKEngine/SDKWrapper/CorsairSDK/: CorsairSDK.cpp  CorsairSDK.h
RGBonREST/APIServer/ServerUtils/SDKEngine/SDKWrapper/CorsairSDK/includes/: CUESDK.h
RGBonREST/APIServer/Utils/: ConfigReader.cpp  ConfigReader.h  ConfigValues.h  Defines.h  Misc.cpp  Misc.h
RGBonREST/Tests/: All.cpp  All.h  CorsairTest.cpp  CorsairTest.h  RazerTest.cpp  RazerTest.h
